Fixed sidebar header button alignment

--- a/src/scss/quadrone/items.scss
+++ b/src/scss/quadrone/items.scss
@@ -182,8 +182,14 @@
       font-size: var(--font-font-size-14, 0.875rem);
       font-style: normal;
       font-weight: 500;
-      line-height: normal;
+      line-height: var(--t5e-lineheight-longform);
       margin-bottom: var(--t5e-size-1x);
+
+      a.button {
+        margin-top: -0.3125rem;
+        margin-bottom: -0.3125rem;
+      }
+
     }
 
     .currency-header {
